save snapshot request
